--- a/manage-react/package.json
+++ b/manage-react/package.json
@@ -31,5 +31,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@loadable/component": "^5.10.2"
   }
 }
