--- a/manage-react/package.json
+++ b/manage-react/package.json
@@ -8,8 +8,10 @@
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-actions": "^2.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +36,9 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@loadable/component": "^5.10.2"
+    "@loadable/component": "^5.10.2",
+    "node-sass": "^4.12.0",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0"
   }
 }
