--- a/manage-react/.babelrc
+++ b/manage-react/.babelrc
@@ -1,4 +1,11 @@
 {
   "presets": ["@babel/preset-react"],
-  "plugins": ["@babel/plugin-syntax-dynamic-import"]
+  "plugins": [
+    "@babel/plugin-syntax-dynamic-import",
+    ["import", {
+      "libraryName": "antd",
+      "libraryDirectory": "es",
+      "style": "css" // `style: true` 会加载 less 文件
+    }]
+  ]
 }
