--- a/manage-react/package.json
+++ b/manage-react/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.20.6",
     "axios": "^0.19.0",
+    "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
