--- a/manage-react/package.json
+++ b/manage-react/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.20.6",
     "axios": "^0.19.0",
     "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
